kubefiles/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-app
  labels:
    name: bank-app
    istio-injection: enabled
